# flutter-waygets

./: .gitignore  BUILD.gn  CMakeLists.txt  DEV_LOGS.md  FlutterEmbedderWayland.cc  Makefile  README.md  build.zig  compile_commands.json  config.json  go.mod  go.sum  gpt.md  install_ubuntu.sh  instructions.md  log  main.dart  main.go  notes.md  notes.txt  pubspec.yaml
.cache/clangd/index/: main.cc.09EF5FD88C328727.idx
.dart_tool/: package_config.json  package_config_subset  version
.dart_tool/flutter_build/0b9b511f3403fbcc9d48f37b9714668c/: .filecache  copy_flutter_bundle.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  outputs.json
.dart_tool/flutter_build/eee596931f520e2d2abbce86fd34d929/: .filecache  linux_engine_sources.d  outputs.json  unpack_linux.stamp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
debug/: CMakeCache.txt
docs/: surfaces-api-draft-v1.md
engine/: flutter_embedder.h
include/: text-input-unstable-v3-client-protocol.h  text-input-unstable-v3-protocol.c  wlr-layer-shell-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1-protocol.c
lib/: main.dart
old/daemon/: engine.zig  input_state.zig  wl_registry_listener.zig
old/flutter/: experimental_fl_compositor.zig  fl_engine.zig  fl_render_config.zig  fl_renderer.zig  fl_task_runners.zig  fl_window.zig
src/: c_imports.zig  embedder.zig  fl_aot.zig  fl_compositor.zig  fl_platform_message_manager.zig  fl_render_config.zig  fl_task_runners.zig  fl_view.zig  fl_window.zig  input.zig  input_state.zig  keyboard_manager.zig  main.cc  main.zig  opengl_config.zig  pointer_manager.zig  vulkan_config.zig  wayland.zig  wl_egl.zig  wl_keyboard_listener.zig  wl_manager.zig  wl_pointer_listener.zig  wl_registry_listener.zig
src/channels/: handler.zig  keyboard.zig  message_callback.zig  platform.zig  textinput.zig
src/daemon/: engine.zig  evdev2glfw.zig  input_state.zig  window_config.zig  wl_egl.zig  wl_keyboard_listener.zig  wl_manager.zig  wl_pointer_listener.zig
src/engine/: egl_window.zig  elf_aot_data.zig  engine.zig  experimental_task_runner.zig  input_state.zig  keyboard_handler.zig  opengl_config.zig  opengl_flutter_config.zig  opengl_window_manager.zig  pointer_handler.zig  utils.zig  vulkan_config.zig  wayland.zig  wayland_egl.zig  wayland_egl_layer.zig  wayland_manager.zig  wayland_registry_handler.zig  window_config.zig  window_state.zig
src/flutter/: aot.zig  compositor.zig  experimental_egl.zig  experimental_fl_compositor.zig  fl_engine.zig  fl_render_config.zig  fl_renderer.zig  fl_task_runners.zig  fl_window.zig  renderer_config.zig  task_runners.zig
src/hw_keyboard/: keydata_format.zig  manager.zig
src/keyboard/: hic.zig  hid.zig  input.zig  keys.zig  listener.zig  manager.zig  raw.zig  udev.zig  udev_hid.zig  xkb.zig
src/listeners/: keyboard.zig  pointer.zig  registry.zig
src/messages/: textinput.zig
src/pointer/: listener.zig  manager.zig
src/textinput/: channel.zig  manager.zig  messages.zig
src/utils/: pretty.zig
src/window/: config.zig  manager.zig  manager.zig~  window.zig
widgets/side_panel/: README.md  pubspec.yaml
widgets/side_panel/android/app/: build.gradle
widgets/side_panel/android/app/src/main/: AndroidManifest.xml
widgets/side_panel/android/app/src/main/kotlin/com/example/side_panel/: MainActivity.kt
widgets/status_bar/: .metadata  Makefile  README.md  pubspec.yaml
widgets/status_bar/test/: widget_test.dart
